--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "multer": "^1.4.5-lts.1",
     "vue": "^3.2.13",
     "vue-plugin-load-script": "^2.1.1",
     "vue-router": "^4.2.5",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/multer": "^1.4.11",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
