--- a/backend/package.json
+++ b/backend/package.json
@@ -5,33 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsx ./src/index.ts",
-    "server": "ts-node -T -P ./tsconfig.json ./src/index.ts",
+    "start": "node ./src/index.js",
+    "server": "node ./src/index.js",
     "pm2": "pm2 start pm2.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.10",
-    "@types/nodemailer": "^6.4.14",
-    "@types/uuid": "^9.0.8",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-mysql-session": "^3.0.0",
     "express-session": "^1.18.0",
-    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "nodemailer": "^6.9.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "sequelize": "^6.37.2",
+    "sequelize-auto": "^0.8.8",
     "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/multer": "^1.4.11"
   }
 }
