--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,11 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
+    "express": ">=4.19.2",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.1",
-    "nodemailer": "^6.9.9",
     "sequelize": "^6.37.2",
-    "sequelize-auto": "^0.8.8",
     "uuid": "^9.0.1"
   }
 }
