--- a/package.json
+++ b/package.json
@@ -1,50 +1,27 @@
 {
-  "name": "dstruct",
-  "version": "0.1.0",
-  "private": true,
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/index.js",
+    "server": "node ./src/index.js",
+    "pm2": "pm2 start pm2.config.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
-    "core-js": "^3.8.3",
-    "multer": "^1.4.5-lts.1",
-    "vue": "^3.2.13",
-    "vue-plugin-load-script": "^2.1.1",
-    "vue-router": "^4.2.5",
-    "vuex": "^4.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@types/multer": "^1.4.11",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": ">=4.19.2",
+    "express-mysql-session": "^3.0.0",
+    "express-session": "^1.18.0",
+    "mysql2": "^3.9.1",
+    "sequelize": "^6.37.2",
+    "uuid": "^9.0.1"
+  }
 }
